--- a/Frontend/src/pages/gallery/video/index.scss
+++ b/Frontend/src/pages/gallery/video/index.scss
@@ -1,13 +1,21 @@
 @import "../../../assets/sass/main.scss";
-.grid-exhibition-container {
+.video-align {
   display: grid;
   gap: 2px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 15vw;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 20vw);
+  .videoFrame {
+    width: 660px !important;
+    height: auto !important;
+  }
   @include breakpoint(md) {
     display: flex;
     flex-direction: column;
     width: 100%;
+    .videoFrame {
+      width: 100% !important;
+      height: auto !important;
+    }
   }
 
   & > :nth-child(1) {
@@ -18,9 +26,5 @@
   & > :nth-child(2) {
     grid-row: 1 / 2;
     grid-column: 2/ 3;
-  }
-  & > :nth-child(3) {
-    grid-row: 1 / 2;
-    grid-column: 3/ 4;
   }
 }
